# Chole

./: .gitignore  Dockerfile  README.md  check_diff_rate.py  data.sqlite  defects_daily_export.csv  dummy.py  export_defects_daily.py  make_dump.ps1  project_dump.json  project_dump.md  pyproject.toml  requirements.txt  temp.py
docs/: eqp_knowledge.md  fab_defect_rules.md  misc_notes.md  tables.md
src/agents/: __init__.py  aggregator.py  data_analyst.py  domain_expert.py  rag_qa.py  supervisor.py  visualizer.py
src/app/: main_streamlit.py
src/core/: __init__.py  config.py  context_loader.py  logging_utils.py  models.py
src/graph/: __init__.py  graph_builder.py
src/tools/: __init__.py  ingest_manuals.py  python_tool.py  rag_store.py  rag_tool.py  sqlite_tool.py
tests/: test_context_loader.py
