[project]
name = "fab-agent"
version = "0.1.0"
description = "Local data-centric fab inspection agent with LangGraph, Streamlit, and SQLite."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.0.70",
    "langchain-openai>=0.3.0",
    "openai>=1.57.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "streamlit>=1.29.0",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agents",
    "src/app",
    "src/core",
    "src/graph",
    "src/tools",
]
